--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="6RMpVpfZ0U9-44ArAgJ_0PpcT4R3tIVBabyswFd3RVQ" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/fav.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
